<resources>
    <string name="app_name">phynix</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="driver">Do you want to be a driver?</string>
    <string name="rider">Do you want to be a rider?</string>
    <string name="emailField">Enter your email here</string>
    <string name="passwordField">Enter your password here</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_account">Create Account</string>
    <string name="loginl">LOGIN</string>
    <string name="ok">ok</string>
    <string name="username">Username</string>
    <string name="or">or</string>
    <string name="card_number">Card Number</string>
    <string name="billing_address">Billing Address</string>
    <string name="date">Date</string>
    <string name="security_pin">Security Pin</string>
    <string name="continue_on">Continue</string>
    <string name="return_on">Return</string>
    <string name="card_holder">Card Holder</string>
    <string name="profilepicture">profilepicture</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="password">Password</string>
    <string name="contact">Contact</string>
    <string name="API_KEY">AIzaSyCcDyZAI469w2vNEUZp7y2MalLQqwllEBM</string>

</resources>
